<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vintellig</string>
    <string name="action_settings">Settings</string>
    <string name="action_userstate">User Statement</string>
    <string name="action_main">Main Menu</string>
    <string name="login_label">Login As Proprietor</string>
    <string name="login_success_label">Login Success</string>

    <string name="login_button">Login As Owner</string>
    <string name="deconnect_button">Deconnect</string>
    <string name="register_button">Register</string>
    <string name="share_button">Share</string>

    <string name="input_loginname">LoginName</string>
    <string name="input_password">Password</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="noLogin">Please login!\n In order to use the full functionality</string>
    <string name="loginFailed">Login Failed</string>
    <string name="share">Share Your Keys</string>

    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="manager_key">Manage your keys</string>
    <string name="welcome">Welcome</string>
    <string name="authen">authenticate</string>
    <!--<string name="input_invite_email">input the invitee's email here…</string>-->
    <string name="input_message">input your message here</string>
    <string name="share_with_others">Share your access with others</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="authen_success">successful authentication</string>
    <string name="authen_failed">authentication failed </string>
    <string name="my_custom_account">Vintellig</string>
</resources>
