<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:background="@color/LightBlue_50"
        android:id="@+id/main_layout">

    <android.support.v7.widget.CardView
        android:id="@+id/login_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/login_info"
                android:text="@string/noLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/Red_500"/>
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/share_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_default_3"
                android:contentDescription="@string/profile"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Grey_900"/>
                <Button
                    android:id="@+id/shareButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share"/>
                <Button
                    android:id="@+id/managerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manager_key"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/authenticate"
        android:text="@string/open"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"/>
    <!--<Button-->
        <!--android:id="@+id/bluetooth"-->
        <!--android:text="bluetooth"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"/>-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cardList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:context=".MainActivity"/>

</LinearLayout>
